	package.
2022-05-09 Fred Gleason <fredg@paravelsystems.com>
	* Added a %post script to the 'aman-remote' RPM package.
2022-05-09 Fred Gleason <fredg@paravelsystems.com>
	* Added 'qt5-qtbase-mysql', 'rsync' and 'bzip2' dependencies to
	the 'aman-remote' RPM package.
2022-05-09 Fred Gleason <fredg@paravelsystems.com>
	* Removed debugging print statements from
	'scripts/aman_add_remote_replication_user.pl'.
2022-05-09 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in amanrmt(1) that caused the 'Audio Replicating'
	lights in the 'Source Servers' section to fail to show green.
2022-05-09 Fred Gleason <fredg@paravelsystems.com>
	* Updated in 'INSTALL' file.
2022-05-10 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'amand/audiostore.cpp' that allowed unsanitized
	data to be written to syslog().
2022-05-10 Fred Gleason <fredg@paravelsystems.com>
	* Added 'compile' to the MAINTAINERCLEANFILES rule in 'Makefile.am'.
2022-05-10 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a regression in 'amand/audiostore.cpp' that broke the
	build.
2022-05-10 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.10.0.
2023-02-28 Fred Gleason <fredg@paravelsystems.com>
	* Modified amanrmt(1) so as to retry rsync connections after receiving
	an error in socket I/O error.
2023-02-28 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.10.1.
2024-05-19 Fred Gleason <fredg@paravelsystems.com>
	* Fixed bugs that caused the build to break on Mint 21.
2024-05-20 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a typo in the metadata for the RPM package.
2024-05-20 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'make deb' target.
2024-05-20 Fred Gleason <fredg@paravelsystems.com>
	* Added default configuration files to the DEB packages.
2024-05-20 Fred Gleason <fredg@paravelsystems.com>
	* Added 'README' and 'INSTALL' to the documentation directory in
	the DEB packages.