@@ -422,3 +422,6 @@ H	* Fixed a typo in 'conf/aman.conf-sample'.
 2024-05-20 Fred Gleason <fredg@paravelsystems.com>
 	* Added 'README' and 'INSTALL' to the documentation directory in
 	the DEB packages.
+2024-05-21 Fred Gleason <fredg@paravelsystems.com>
+	* Refactored 'scripts/aman_add_replication_users.pl scripts' to use
+	the 'GRANT' SQL statement.
